# landscape-architecture-tool

./: .codecov.yml  .coveragerc  .deepsource.toml  .editorconfig  .env.example  .env.production.template  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .trigger-deploy  =2.0.0  ARCHIVING_REPORT.md  BRANCH_MIGRATION_REQUIRED.md  CACHE_USAGE.md  CI_HANGING_ISSUE_FIX_SUMMARY.md  CODE_QUALITY_REPORT.md  COMPREHENSIVE_FRONTEND_ANALYSIS_REPORT.md  COMPREHENSIVE_OPTIMIZATION_ANALYSIS.md  CONTRIBUTING.md  COPILOT_FIX_GUIDE.md  DEPENDENCY_UPDATE_PROCEDURES.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENVIRONMENT_SETUP.md  FIX_VPS_NOW.md  INSTRUCTIONS_FOR_USER.txt  ISSUE_RESOLUTION_VPS_REINSTALL.md  LICENSE  Makefile  N8N_INTEGRATION_ANALYSIS.md  OPTIMIZATION_COMPLETE.md  OptimizedPlantForm.jsx  PERFORMANCE_OPTIMIZATION_FRAMEWORK.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_INTEGRATION_STABILIZATION.md  PHASE_4_PREVENTION_MEASURES.md  (+126 more)
.devcontainer/: README.md  demo.json  devcontainer-complex.json.backup  devcontainer-simple.json  devcontainer.json  devcontainer.json.bak  setup.sh
.github/: BRANCH_PROTECTION_STRATEGY.md  CODEOWNERS  SECRETS_REQUIRED.md  copilot-instructions-v1d.md  copilot-instructions.md  copilot_instructions.md  dependabot.yml  labeler.yml  pull_request_template.md  security.md
.github/ISSUE_TEMPLATE/: a1_automation_task.md  b1_backend_task.md  bug_report.md  d1_deployment_task.md  development-steps.md  doc1_documentation_task.md  dt1_data_tooling_task.md  f1_frontend_task.md  feature_request.md  t1_testing_task.md
.github/PULL_REQUEST_TEMPLATE/: a1_automation_pr.md  b1_backend_pr.md  d1_deployment_pr.md  doc1_documentation_pr.md  dt1_data_tooling_pr.md  f1_frontend_pr.md  t1_testing_pr.md
.github/copilot-instructions/: README.md  automation.md  backend.md  data_tooling.md  deployment.md  documentation.md  frontend.md  subworkflows.md  testing.md
.github/motherspace-safety/: cooldown_github-actions_harmony_check.json  cooldown_test-actor_test_operation.json  patterns_github-actions.json  patterns_test-actor.json  patterns_test-bot.json  rate_test_operation.json  tracking_issues.json
.github/workflows/: ci.yml  (+38 more)
.manus/: .gitignore  CONTINUATION_INSTRUCTIONS.md  COPILOT_INSTRUCTIONS.md  MANUS_CONTEXT_MANAGEMENT.md  TASK_CONTINUATION.md  handoff_to_copilot.sh  load_secrets.sh
Pre_V3/: COMPREHENSIVE_DEVELOPMENT_ANALYSIS_REPORT.md  EXECUTIVE_SUMMARY.md
_internal/: README.md
archive/: FIXES_APPLIED.md  README.md  version-comparison-20250912_115155.md
config/: README.md  category_map.yml  gunicorn.conf.py  wsgi.py
docs/: API_DOCUMENTATION.md  BEST_PRACTICES_OVERVIEW.md  BRANCHING_STRATEGY.md  BRANCH_MIGRATION_GUIDE.md  BRANCH_MIGRATION_IMPLEMENTATION_SUMMARY.md  BRANCH_MIGRATION_QUICK_REFERENCE.md  CI_TIMEOUT_SOLUTIONS.md  COMPREHENSIVE_TESTING_ANALYSIS.md  COPILOT_SPACES_INTEGRATION.md  DEBUGGING_GUIDE.md  DEPENDABOT_AUTO_MERGE_FIX.md  DEVELOPMENT_GUIDE.md  DYNAMIC_PR_COUNT_SOLUTION.md  GITHUB_BRANCH_RENAME_INSTRUCTIONS.md  MERGE_READINESS_CHECKLIST.md  MOTHERSPACE_FINGERPRINTING.md  MOTHERSPACE_OVERVIEW.md  QUICK_START_VPS_REINSTALL.md  QUICK_VPS_DEPLOY.md  README.md  SETUP_COPILOT_SPACE.md  SPACE_OVERVIEW.md  V1_DEVDEPLOY_SOLUTION.md  V1_DEVDEPLOY_WORKFLOW.md  VPS_ARCHITECTURE.md  VPS_CLEAN_REINSTALL_GUIDE.md  VPS_DEPLOYMENT_INSTRUCTIONS.md  VPS_DEPLOYMENT_SOLUTION.md  VPS_QUICK_REFERENCE.md  VPS_REINSTALL_FLOWCHART.md  VPS_SSH_USER_SECRETS_VERIFICATION.md  WORKFLOW_ANALYSIS_REPORT.md
documentation/: README.md
frontend/: .coveragerc  .env.demo  .env.development  .env.production  DUAL_TESTING_SETUP.md  Dockerfile  coverage-template.html  eslint.config.js  index.html  jest.config.js  jest.config.json  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.js  vitest.config.js
frontend-backup/: package-lock.json  vite.config.js  vite.config.js.bak
landscape-tool-fixes/: README.md  ignore this file
migrations/: add_database_indexes.py
n8n-workflows/: README.md  project-created.json
reports/: README.md  V1_00D_COMPREHENSIVE_VALIDATION_REPORT.md  V1_00D_VPS_ACCESS_DIAGNOSTIC_2025-10-02.md  V1_00D_VPS_COMPREHENSIVE_VERIFICATION_REPORT.md  VPS_ACCESS_TEST_AFTER_FIREWALL_ACTIVATION.md  VPS_ACCESS_TEST_AFTER_FIREWALL_RESET.md  VPS_ACCESS_TEST_AFTER_RESTART.md  development_analysis_20250929_062239.json
screenshots/: MAINTENANCE.md  README.md
scripts/: README.md  __init__.py  admin_user_testing.py  automated_validation.py  clean-cache.sh  code_quality_check.py  compare_versions.sh  compile_requirements.sh  comprehensive_admin_test_fix.py  comprehensive_development_analysis.py  comprehensive_ui_analysis.py  comprehensive_validation.py  copilot_dependency_analyzer.py  copilot_workflow.py  create_admin_user.py  demo_pr_count_fix.py  dependabot_merge_helper.py  deploy-vps.sh  deploy_helper.sh  deploy_to_vps.sh  deploy_vps_automated.sh  dynamic_validation_report.py  enhanced-deploy.sh  final_comprehensive_report.py  final_comprehensive_validation.py  final_ui_fix_report.py  fix_eslint_issues.py  fix_ui_text_issues.py  github-actions-deploy.sh  linting_improvements_summary.py  motherspace_safety.py  optimization_implementation.py  organize_clutter.py  performance_demo.py  phase4_validation.py  pipeline_health_monitor.py  pipeline_monitor.py  reset_dev_environment.sh  safe-branch-cleanup.sh  setup-webhooks.sh  (+17 more)
src/: config.py  main.py  wsgi.py
tests/: README.md  conftest.py  test_analytics.py  test_api_review_endpoints.py  test_basic.py  test_cache.py  test_ci_stability.py  test_config_keys.py  test_coverage_boost.py  test_database_isolation.py  test_dependency_validation_fix.py  test_dependency_validator_import.py  test_dev_log.py  test_enhanced_safety.py  test_excel_import.py  test_integration.py  test_invoice_generation.py  test_issue_fingerprint.py  test_motherspace_enhancement.py  test_n8n_integration.py  test_performance.py  test_photo_system.py  test_plant_recommendations.py  test_project_plants.py  test_timeout_handling.py  test_transaction_handling_fix.py
(+552 files in other folders)
