[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "landscape-architecture-tool"
dynamic = ["version"]
description = "Professional landscape architecture project management tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Landscape Architecture Tool Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 120
src = ["."]
exclude = [
  ".git",
  ".venv",
  "venv",
  "build",
  "dist",
  "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--maxfail=5"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
    "service: marks tests as service layer tests",
    "database: marks tests as database tests"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.safety]
ignore = [
    # Known issues that are acceptable for development
    # 70612: Jinja2 vulnerability. Acceptable because we are using a pinned version (>=3.1.2) that is not affected.
    #         No user-supplied templates are rendered in this project, further reducing risk.
    #         Review this ignore entry when Jinja2 releases a new major or minor version, or at least quarterly.
    "70612",
]

[tool.pip-tools]
# Enhanced pip-compile configuration for network reliability
index-url = "https://pypi.org/simple"
resolver = "backtracking"
# Use backtracking resolver for better dependency resolution
generate-hashes = false
# Disable hash generation for faster compilation
emit-index-url = true
emit-options = true